
	* freeipmi.spec.in, configure.ac: Adjust appropriately.

	* ipmi-raw/: Parse '0x' in hex codes too.  Fix seg-fault corner
	case.

	* common/src/pstdout.c (_pstdout_output_buffer_data,
	_pstdout_output_finish): Alter default output of buffered
	hostrange output.

	* bmc-info/, ipmi-raw/, ipmi-sel/, ipmi-sensors/, ipmimonitoring/:
	Alter default output of buffered hostrange output.
	
2007-04-27  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_defs.h: Fix k_g
	corner case.

	* libfreeipmi/src/ipmi-dmidecode-locate.c: Get rid of leftover
	debugging.

	* ipmimonitoring/: Support -s and -g in ipmimonitoring.
	
2007-04-27  Levi Pearson <lpearson@lnxi.com>

	* common/src/ipmi-common.h, common/src/ipmi-common.c (parse_kg,
	format_kg): New functions.

	* ipmipower/: Support hex keys for K_g.
	
2007-04-27  Albert Chu <chu11@llnl.gov>

	* libfreeipm/, common/src, ipmi-sel/, ipmi-sensors: Rename
	"logical_fru" to "fru" for consistency with the ipmi spec.

	* ipmi-sel/src/ipmi-sel-wrappers.c (_get_sel_system_event_record):
	Output sensor names when they are available.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Update -s option info.

	* ipmimonitoring/src/libipmimonitoring/: Bug fixes and code
	cleanup.

	* ipmimonitoring/: Support -q option in ipmimonitoring.

	* common/doc/argp-common-hostranged-text.man,
	ipmimonitoring/ipmimonitoring.8.in: Add extra hostrange output
	info.

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (ipmi_lan_cmd):
	Check checksums before other stuff.
	
2007-04-26  Albert Chu <chu11@llnl.gov>

        * ipmimonitoring/ipmimonitoring.8.in, ipmidetect/ipmidetectd.8.in,
	ipmiconsole/ipmiconsole.8.in: Fix manpage output bug.

	* ipmimonitoring/ipmimonitoring.8.in: Reword some text.

	* ipmipower/ipmipower8.in, ipmiconsole/ipmiconsole.8.in,
	ipmimonitoring/libipmimonitoring.3.in: Update some text.

	* ac_ipmi_monitoring_sensor_config_file.m4: Fix filename typo.

	* doc/freeipmi-faq.texi: Fix some wording.
