@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower.h,v 1.69 2007-04-28 00:28:17 chu11 Exp $
+ *  $Id: ipmipower.h,v 1.70 2007-04-28 19:22:33 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2003 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -363,16 +363,6 @@ typedef enum
   ((__c) == CIPHER_SUITE_ID_AUTO \
    || CIPHER_SUITE_ID_VALID(__c))
 
-/* Output Types */
-typedef enum { OUTPUT_TYPE_INVALID   = 0,
-               OUTPUT_TYPE_NONE      = 1,
-               OUTPUT_TYPE_NEWLINE   = 2,
-               OUTPUT_TYPE_HOSTRANGE = 3} output_type_t;
-
-#define OUTPUT_TYPE_VALID(__o) \
-  ((__o) >= OUTPUT_TYPE_NONE && \
-   (__o) <= OUTPUT_TYPE_HOSTRANGE)
-
 /* Msg Types */
 typedef enum 
   { 
@@ -565,7 +555,9 @@ struct ipmipower_config
    */
   ipmipower_bool_t         k_g_configured;
   power_cmd_t              powercmd;
+#ifndef NDEBUG
   char                     configfile[MAXPATHLEN+1];
+#endif /* NDEBUG */
 
   authentication_type_t    authentication_type;
   privilege_type_t         privilege;
@@ -575,7 +567,7 @@ struct ipmipower_config
   ipmipower_bool_t         wait_until_on;
   ipmipower_bool_t         wait_until_off;
   ipmipower_bool_t         power_command_completed; /* for use with wait_until_X */
-  output_type_t            outputtype;
+  ipmipower_bool_t         consolidate_output;
   uint32_t                 workaround_flags;
 #ifndef NDEBUG
   ipmipower_bool_t         debug;
@@ -608,7 +600,7 @@ struct ipmipower_config
   ipmipower_bool_t         wait_until_on_set_on_cmdline;
   ipmipower_bool_t         wait_until_off_set_on_cmdline;
   ipmipower_bool_t         workaround_flags_set_on_cmdline;
-  ipmipower_bool_t         outputtype_set_on_cmdline;
+  ipmipower_bool_t         consolidate_output_set_on_cmdline;
   ipmipower_bool_t         timeout_len_set_on_cmdline;
   ipmipower_bool_t         retry_timeout_len_set_on_cmdline;
   ipmipower_bool_t         retry_wait_timeout_len_set_on_cmdline;
