@@ -10,6 +10,7 @@ o Added -T option to ipmiconsole.
 o Re-architected workarounds options for Ipmipower due to increasing number
   of vendor specific workarounds implemented. -W, -S, -Z, -X, -Y options removed.
   New -W option implemented.
+o Adjust ipmipower options to follow hostrange convention.
 o -Q option added for ipmi-sensors and ipmi-sel.
 o Add community string and alert config to bmc-config.
 o Add verbose checkout/commit progress information for large checkout(s)/commit(s).
